--- a/index.html
+++ b/index.html
@@ -18,13 +18,32 @@
 
         <p id="player_choice">&nbsp;</p>
         <p id="computer_choice">&nbsp;</p>
-        <p id="round_result">&nbsp;</p>
+        <p class="text-danger" id="round_result">&nbsp;</p>
         <hr>
         <p class="mb-5">Choose rock, paper or scissors!</p>
 
-        <button class="btn btn-outline-primary">Rock</button>
-        <button class="btn btn-outline-warning">Paper</button>
-        <button class="btn btn-outline-success">Scissors</button>
+        <button onclick="choose(0)" class="btn btn-outline-primary">Rock</button>
+        <button onclick="choose(1)" class="btn btn-outline-warning">Paper</button>
+        <button onclick="choose(2)" class="btn btn-outline-success">Scissors</button>
     </div>
+
+    <script>
+        function choose(x) {
+            fetch("/play?c=" + x)
+            .then(response => response.json())
+            .then(data => {
+                if(x == 0) {
+                    document.getElementById("player_choice").innerHTML = "Player chose ROCK";
+                } else if(x == 1){
+                    document.getElementById("player_choice").innerHTML = "Player chose PAPER";
+                } else {
+                    document.getElementById("player_choice").innerHTML = "Player chose SCISSORS";
+                }
+
+                document.getElementById("computer_choice").innerHTML = data.computer_choice
+                document.getElementById("round_result").innerHTML = data.round_result
+            });
+        }
+    </script>
 </body>
 </html>
